images and html completed

--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
 </head>
 <body>
     <div class="navbar">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="logo" href="#Logo">Home</a>
+        <a href="#Our Story">News</a>
+        <a href="#Products">Contact</a>
+        <a href="#Order for Collection">About</a>
+    </div>
+    <div>
+        <h2>Tim's Bakery Website</h2>
+        <p>Tim's Cakes are world-renowned (Northern Ireland)</p>
+        <button type="submit" class="signupbtn">Sign Up</button>
+        <img src=images/cottage.jpeg height="400" width="400"/>
+    </div>
+    <div>
+        <h3> Examples Cakes</h3>
+        <div class="flex-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>3</div>
+          </div>
+    </div>
+    <div class="quotation">
+        <p>Customer Quotation</p>
     </div>
 </body>
 </html>
