--- a/index.html
+++ b/index.html
@@ -3,32 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Bakery Landing Page</title>
 </head>
 <body>
-    <div class="navbar">
-        <a class="logo" href="#Logo">Home</a>
-        <a href="#Our Story">News</a>
-        <a href="#Products">Contact</a>
-        <a href="#Order for Collection">About</a>
+    <div class="nav-bar">
+        <div class="nav-item"><h3>Nelson Bakery</h3></div>
+        <div class="nav-item"><a href="#">Our Story</a></div>
+        <div class="nav-item"><a href="#">Products</a></div>
+        <div class="nav-item"><a href="#">Pre-Order</a></div>
+        <div class="nav-item"><a href="#">Contact</a></div>
     </div>
-    <div>
+    <div class="bakery-container">
+        <div class="second">
         <h2>Tim's Bakery Website</h2>
         <p>Tim's Cakes are world-renowned (Northern Ireland)</p>
         <button type="submit" class="signupbtn">Sign Up</button>
-        <img src=images/cottage.jpeg height="400" width="400"/>
+        </div>
+        <img src=images/cropped_cottage.jpg height="200" width="400"/>
     </div>
     <div>
         <h3> Examples Cakes</h3>
         <div class="flex-container">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>3</div>
+            <div>
+                <img src=images/cottage.jpeg height="40" width="40">
+                <p>Description</p>
+            </div>
+            <div>
+                <img src=images/cottage.jpeg height="40" width="40">
+                <p>of Something</p>
+            </div>
+            <div>
+                <img src=images/cottage.jpeg height="40" width="40">
+                <p>in the Boxes</p>
+            </div>
+            <div>
+                <img src=images/cottage.jpeg height="40" width="40">
+                <p>Above</p>
+            </div>
           </div>
     </div>
     <div class="quotation">
         <p>Customer Quotation</p>
+        <div>
+            <p>-Jonny Nelson, Data Scientist</p>
+        </div>
     </div>
 </body>
 </html>
