--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
         <div class="second">
         <h2>Tim's Bakery Website</h2>
         <p>Tim's Cakes are world-renowned (Northern Ireland)</p>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <button type="submit" class="signup-button">Sign Up</button>
         </div>
         <img src=images/cropped_cottage.jpg height="200" width="400"/>
     </div>
-    <div>
-        <h3> Examples Cakes</h3>
-        <div class="flex-container">
-            <div>
-                <img src=images/cottage.jpeg height="40" width="40">
-                <p>Description</p>
-            </div>
-            <div>
-                <img src=images/cottage.jpeg height="40" width="40">
-                <p>of Something</p>
-            </div>
-            <div>
-                <img src=images/cottage.jpeg height="40" width="40">
-                <p>in the Boxes</p>
-            </div>
-            <div>
-                <img src=images/cottage.jpeg height="40" width="40">
-                <p>Above</p>
-            </div>
-          </div>
+    <div class="examples-container">
+        <h3 class="section-header">Examples Cakes</h3>
+    </div>
+    <div class="image-container">
+        <div class="img-item">
+            <img src=images/cottage.jpeg height="40" width="40">
+            <p>Description</p>
+        </div>
+        <div class="img-item">
+            <img src=images/cottage.jpeg height="40" width="40">
+            <p>of Something</p>
+        </div>
+        <div class="img-item">
+            <img src=images/cottage.jpeg height="40" width="40">
+            <p>in the Boxes</p>
+        </div>
+        <div class="img-item">
+            <img src=images/cottage.jpeg height="40" width="40">
+            <p>Above</p>
+        </div>
     </div>
     <div class="quotation">
         <p>Customer Quotation</p>
