Monday Evening Fun

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <div class="nav-bar">
-        <div class="nav-item"><h3>Nelson Bakery</h3></div>
+        <div class="nav-item"><h3>Nelson Bakery  </h3></div>
         <div class="nav-item"><a href="#">Our Story</a></div>
         <div class="nav-item"><a href="#">Products</a></div>
         <div class="nav-item"><a href="#">Pre-Order</a></div>
         <div class="nav-item"><a href="#">Contact</a></div>
     </div>
     <div class="bakery-container">
-        <div class="second">
+        <div class="first">
         <h2>Tim's Bakery Website</h2>
         <p>Tim's Cakes are world-renowned (Northern Ireland)</p>
         <button type="submit" class="signup-button">Sign Up</button>
         </div>
+        <div class="second">
         <img src=images/cropped_cottage.jpg height="200" width="400"/>
+        </div>
     </div>
     <div class="examples-container">
         <h3 class="section-header">Examples Cakes</h3>
@@ -44,9 +46,16 @@
         </div>
     </div>
     <div class="quotation">
-        <p>Customer Quotation</p>
+        <div class="quotation-text"><p>Nelson's Bread is the best bread in the land</p></div>
+        <div class="quotation-name"><p>- Morag Macdonald, Choccy Bear</p></div>
+    </div>
+    <div class="signup-section">
+        <div class="signup-item">
+            <p>Sign up for some bread here</p>
+            <p>Pretty Please</p>
+        </div>
         <div>
-            <p>-Jonny Nelson, Data Scientist</p>
+            <button type="submit" class="signup-button">Sign Up</button>
         </div>
     </div>
 </body>
