New Years Eve Eve Eve Fun

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul class="product-list">
                     <li class="product">
                         <product-card>
-                            <picture>
+                            <picture class="product-image">
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
@@ -50,7 +50,7 @@
                     </li>
                     <li class="product">
                         <product-card>
-                            <picture>
+                            <picture class="product-image">
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
@@ -61,7 +61,7 @@
                     </li>
                     <li class="product">
                         <product-card>
-                            <picture>
+                            <picture class="product-image">
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
@@ -72,7 +72,7 @@
                     </li>
                     <li class="product">
                         <product-card>
-                            <picture>
+                            <picture class="product-image">
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
@@ -85,14 +85,27 @@
             </products-grid>
         </inner-column>
     </section>
-    <section>
+    <section class="quote-section">
         <inner-column>
-            <h2>Heading</h2>
+            <quote>
+                <div>
+                    <p class="quote-voice">
+                        This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or
+                        maybe people may actually read it. Who knows? All I know is that it looks nice.</p>
+                    <p class="quote-author">-Thor, God of Thunder</p>
+                </div>
+            </quote>
         </inner-column>
     </section>
-    <section>
+    <section class="action">
         <inner-column>
-            <h2>Heading</h2>
+            <graphic-diptych-two>
+                <text-content>
+                    <h2 class="loud-voice">Call to Action! It's Time!</h2>
+                    <p class="calm-voice">Sign up for our products by clicking that button right over there!</p>
+                    <a class="button" href="#">Sign Up</a>
+                </text-content>
+            </graphic-diptych-two>
         </inner-column>
     </section>
 </main>
