Landing Page Header, Footer and Call to Action html and css.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 <body>
 <header>
     <inner-column>
-        <h1>Heading</h1>
+        <nav>
+            <logo>
+                <a href="#">Header Logo</a>
+            </logo>
+            <links>
+                <ul>
+                    <li><a class="calm-voice" href="#">header link one</a></li>
+                    <li><a class="calm-voice" href="#">header link two</a></li>
+                    <li><a class="calm-voice" href="#">header link three</a></li>
+                </ul>
+            </links>
+        </nav>
     </inner-column>
 </header>
 <main>
@@ -17,13 +28,13 @@
         <inner-column>
             <graphic-diptych>
                 <picture>
-                    <img src="images/cottage.jpeg" alt="#">
+                    <img src="images/cropped_cottage.jpg" alt="#">
                 </picture>
                 <text-content>
-                    <h1 class="loud-voice">This site is not that awesome</h1>
+                    <h1 class="loud-voice">This website is awesome</h1>
 
-                    <p class="calm-voice">Here is the text to support the welcome area things
-                    that are happening somewhere on this section</p>
+                    <p class="calm-voice">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color is lower in contrast</p>
 
                     <a class="button" href="#">Sign Up</a>
                 </text-content>
@@ -34,7 +45,7 @@
         <inner-column>
             <products-grid>
                 <div>
-                    <h2 class="loud-voice">Our Products</h2>
+                    <h2 class="loud-voice">Some random information</h2>
                 </div>
                 <ul class="product-list">
                     <li class="product">
@@ -43,8 +54,7 @@
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
-                                <h3 class="calm-voice">Here is the text to support the welcome area things
-                                    that are happening somewhere on this section</h3>
+                                <h3 class="calm-voice">This is some subtext under and illustration or image</h3>
                             </text-content>
                         </product-card>
                     </li>
@@ -54,8 +64,7 @@
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
-                                <h3 class="calm-voice">Here is the text to support the welcome area things
-                                    that are happening somewhere on this section</h3>
+                                <h3 class="calm-voice">This is some subtext under and illustration or image</h3>
                             </text-content>
                         </product-card>
                     </li>
@@ -65,8 +74,7 @@
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
-                                <h3 class="calm-voice">Here is the text to support the welcome area things
-                                    that are happening somewhere on this section</h3>
+                                <h3 class="calm-voice">This is some subtext under and illustration or image</h3>
                             </text-content>
                         </product-card>
                     </li>
@@ -76,8 +84,7 @@
                                 <img src="images/cottage.jpeg" alt="#">
                             </picture>
                             <text-content>
-                                <h3 class="calm-voice">Here is the text to support the welcome area things
-                                    that are happening somewhere on this section</h3>
+                                <h3 class="calm-voice">This is some subtext under and illustration or image</h3>
                             </text-content>
                         </product-card>
                     </li>
@@ -103,15 +110,19 @@
                 <text-content>
                     <h2 class="loud-voice">Call to Action! It's Time!</h2>
                     <p class="calm-voice">Sign up for our products by clicking that button right over there!</p>
-                    <a class="button" href="#">Sign Up</a>
                 </text-content>
+                <button-moveable>
+                    <a class="button" href="#">Sign Up</a>
+                </button-moveable>
             </graphic-diptych-two>
         </inner-column>
     </section>
 </main>
 <footer>
     <inner-column>
-        <h2>Footer</h2>
+        <copyright>
+            <p class="calm-voice">Copyright @ Nelson Project 2023</p>
+        </copyright>
     </inner-column>
 </footer>
 </body>
